--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,7 @@
    <arg line="${source_comma_sep}
               xml
               codesize,design,naming,unusedcode
-              --exclude test,build,PHPExcel,tcpdf,php-gettext
+              --exclude test,build,tcpdf,php-gettext
               --reportfile ${basedir}/build/logs/pmd.xml" />
   </exec>
  </target>
@@ -48,7 +48,6 @@
    <arg line="--log-pmd ${basedir}/build/logs/pmd-cpd.xml
               --exclude test
               --exclude build
-              --exclude libraries/PHPExcel
               --exclude libraries/tcpdf
               --exclude libraries/php-gettext
               ${source}" />
@@ -60,17 +59,16 @@
    <arg line="--log-csv ${basedir}/build/logs/phploc.csv
               --exclude test
               --exclude build
-              --exclude libraries/PHPExcel
               --exclude libraries/tcpdf
               --exclude libraries/php-gettext
               ${source}" />
   </exec>
  </target>
 
- <target name="phpcs" description="Generate checkstyle.xml using PHP_CodeSniffer excluding test, PHPExcel, tcpdf directories">
+ <target name="phpcs" description="Generate checkstyle.xml using PHP_CodeSniffer excluding test, tcpdf directories">
   <exec executable="phpcs">
    <arg line="
-              --ignore=*/PHPExcel/*,*/php-gettext/*,*/tcpdf/*,*/canvg/*,*/codemirror/*,*/highcharts/*,*/openlayers/*,*/jquery/*,*/build/*
+              --ignore=*/php-gettext/*,*/tcpdf/*,*/canvg/*,*/codemirror/*,*/highcharts/*,*/openlayers/*,*/jquery/*,*/build/*
               --report=checkstyle
               --report-file=${basedir}/build/logs/checkstyle.xml
               --standard=PEAR
